--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-black==25.11.0
+black==25.12.0
 click==8.3.1
 flake8==7.3.0
 flake8_import_order==0.19.2
+librt==0.7.7
 mccabe==0.7.0
-mypy==1.18.2
+mypy==1.19.1
 mypy_extensions==1.1.0
 packaging==25.0
-pathspec==0.12.1
-platformdirs==4.5.0
+pathspec==1.0.3
+platformdirs==4.5.1
 pycodestyle==2.14.0
 pyflakes==3.4.0
 pytokens==0.3.0
